[package]
name = "diesel-example"
version = "1.0.0"
authors = [
  "Nikolay Kim <fafhrd91@gmail.com>",
  "Rob Ede <robjtede@icloud.com>",
]
edition = "2018"

[dependencies]
ntex = { version = "0.5.24", features = ["tokio"] }
[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.9"
futures = "0.3"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.1", features = ["serde", "v4"] }
